--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
+
+DEPLOY_HOST=deploy@example.com
+DEPLOY_APP_ROOT=/var/www/exmple.com
