--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
-  "devDependencies": {
+  "dependencies": {
+    "bower": "^1.4.1",
     "gulp": "^3.8.11",
     "laravel-elixir": "^1.0.0"
   }
