Fix VirtualBox bug

--- a/vagrant/nginx-site.conf
+++ b/vagrant/nginx-site.conf
@@ -8,6 +8,8 @@ server {
     root /var/www/public;
     index index.html index.php;
 
+    sendfile off; # fix VirtualBox bug
+
     location / {
         try_files $uri $uri/ @index-php;
     }
